# RenameShows

./: .env_template  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
rename_shows/: __init__.py  main.py
rename_shows/api/: __init__.py  api_error.py  show_api.py  show_database_api.py  the_movie_database_api.py  tv_db_api.py
rename_shows/controller/: rename_controller.py
rename_shows/core/api/: show_api.py  the_movie_database_api.py  tv_db_api.py
rename_shows/core/controller/: rename_controller.py
rename_shows/core/model/: episode.py  file.py  movie.py  show.py  tv.py
rename_shows/core/util/: show_info_matcher.py
rename_shows/util/: __init__.py  show_info_matcher.py
tests/core/util/: test_show_info_matcher_test.py
tests/util/: show_info_matcher_test.py
