[metadata]
name = rename_shows
version = 1.0.0
description = helps rename show files using show database apis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c-eg/RenameShows
author = Conor Egan, Chrisopher Sutcliffe
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    black==22.1.0
    pylint==2.12.2
    python-dotenv==0.19.2
    requests==2.27.1
tests_require =
    unittest

[options.packages.find]
exclude =
    tests*
