[metadata]
name = rename_shows
version = 0.0.1
description = helps rename show files using show database apis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c-eg/RenameShows
author = Conor Egan, Chrisopher Sutcliffe
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    python-dotenv==0.19.2
    requests==2.27.1
python_requires = >=3.8
tests_require =
    unittest

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    black==22.1.0
    pylint==2.12.2
